--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body.toggled-style h1 {
 p {
     font-size: 1.2rem;
     line-height: 1.6;
-    max-width: none;
+    width: 65%;
     color: #dcdcdc;
     margin-bottom: 20px;
 }
